@@ -2,7 +2,7 @@
 
 rem Set CATALINA_OPTS with multiple options
 set "CATALINA_OPTS=%CATALINA_OPTS% -Dfile.encoding=UTF8"
-set "CATALINA_OPTS=%CATALINA_OPTS% --illegal-access=deny"
+
 set "CATALINA_OPTS=%CATALINA_OPTS% --add-opens java.base/java.lang=ALL-UNNAMED"
 set "CATALINA_OPTS=%CATALINA_OPTS% --add-opens java.base/java.io=ALL-UNNAMED"
 set "CATALINA_OPTS=%CATALINA_OPTS% --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED"
